--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 @font-face {
 	font-family: gilroy;
-	src: url(./fonts/gilroyextrabold.woff), url(./fonts/gilroyextrabold.woff2);
+	src: url(../fonts/gilroyextrabold.woff), url(../fonts/gilroyextrabold.woff2);
 	font-weight: bold;
 }
 
 @font-face {
 	font-family: gilroy;
-	src: url(./fonts/gilroylight.woff), url(./fonts/gilroylight.woff2);
+	src: url(../fonts/gilroylight.woff), url(../fonts/gilroylight.woff2);
 	font-weight: lighter;
 }
 
