--- a/css/style.css
+++ b/css/style.css
@@ -495,3 +495,155 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 .htmlacademy {
 	margin-top: 12px;
 }
+
+.container.title {
+	margin-top: -167px;
+	margin-bottom: 43px;
+}
+
+.breadcrumbs-title {
+	margin-left: 60px;
+	margin-bottom: 16px;
+	letter-spacing: 0.015em;
+}
+
+.title .breadcrumbs {
+	display: flex;
+	margin-left: 60px;
+	font-size: 14px;
+}
+
+.breadcrumbs-link {
+	margin-right: 17px;
+}
+
+.breadcrumbs-link::after {
+	content: "";
+	display: inline-block;
+	background-image: url(../img/nav-arrow.png);
+	width: 4px;
+	height: 7px;
+	margin-left: 15px;
+}
+
+.catalog-section {
+	background-color: #ffffff;
+}
+
+.catalog-section .container {
+	display: flex;
+	flex-direction: row;
+}
+
+.filter {
+	display: flex;
+	flex-direction: column;
+	min-width: 268px;
+	margin-right: auto;
+	padding-left: 60px;
+}
+
+.filter-header {
+	padding: 20px 0;
+	text-transform: uppercase;
+	font-family: gilroy;
+	font-size: 14px;
+	letter-spacing: 0.24em;
+	margin-bottom: 50px;
+}
+
+.filter-form {
+	
+}
+
+.sorting {
+	display: flex;
+	flex-direction: column;
+	min-width: 760px;
+	padding-left: 72px;
+}
+
+.sorting-header {
+	display: flex;
+	padding: 20px 0;
+}
+
+.sorting-title {
+	font-family: gilroy;
+	text-transform: uppercase;
+	font-size: 16px;
+	letter-spacing: 0.23em;
+	margin-right: 50px;
+}
+
+.sorting-options {
+	display: flex;
+	font-size: 14px;
+}
+
+.sorting-option {
+	margin-right: 30px;
+}
+
+.catalog-items {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.card-img {
+	background-color: #efefef;
+	margin-bottom: 21px
+}
+
+.catalog-item {
+	flex-basis: 360px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	position: relative;
+	margin-top: 69px;
+}
+
+.item-nav {
+	position: absolute;
+	top: 172px;
+	left: 74px;
+	text-align: center;
+}
+
+.item-name {
+	font-family: gilroy;
+	font-weight: bold;
+	font-size: 18px;
+}
+
+.paginator {
+	display: flex;
+	justify-content: center;
+	font-family: gilroy;
+	font-weight: bold;
+	font-size: 16px;
+	text-transform: uppercase;
+	letter-spacing: 0.25em;
+	padding: 21px 0;
+	margin-top: 53px;
+	background-color: #efefef;
+	margin-bottom: 69px
+}
+
+.prev {
+	margin-left: 30px;
+	margin-right: auto;
+}
+
+.next {
+	margin-right: 25px;
+	margin-left: auto;
+}
+
+.page {
+	margin-left: 7px;
+	padding: 0 10px;
+}
