--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,18 @@
 @font-face {
 	font-family: gilroy;
 	src: url(../fonts/gilroyextrabold.woff), url(../fonts/gilroyextrabold.woff2);
-	font-weight: bold;
+	font-weight: 800;
 }
 
 @font-face {
 	font-family: gilroy;
 	src: url(../fonts/gilroylight.woff), url(../fonts/gilroylight.woff2);
-	font-weight: lighter;
-}
-
-@import url("https://fonts.googleapis.com/css?family=Open+Sans");
-
-* {
-    margin: 0;
-    padding: 0;
-	list-style: none;
-	text-decoration: none;
+	font-weight: 400;
 }
 
 body {
+	margin: 0;
+	padding: 0;
 	font-family: "Open Sans", Arial, sans-serif;
 	letter-spacing: inherit;
 	font-size: 15px;
@@ -47,59 +40,179 @@ body {
 .btn {
 	font-family: gilroy;
 	font-size: 18px;
-	line-height: 8px;
 	letter-spacing: 0.2em;
 	text-transform: uppercase;
 	font-weight: bold;
 	margin-right: auto;
 	padding: 0 40px;
+	text-decoration: none;
+}
+
+.main-header .container {
+	background-color: #f7e296;
+	box-shadow: inset 0 18px white;
+	padding: 0;
 }
 
 .header-logo {
 	width: 200px;
-	margin-left: 60px;
-	margin-top: 20px;
+	margin-left: 59px;
+	margin-top: 21px;
+}
+
+.header-logo:hover {
+	opacity: 0.6;
+}
+
+.header-logo:active {
+	opacity: 0.3;
 }
 
 .user-block {
 	display: flex;
 	flex-direction: row;
+	align-items: baseline;
 	justify-content: space-between;
 	align-self: flex-start;
-	flex-basis: 1040px;
-	margin: 18px 60px 36px 60px;
+	width: 1040px;
+	margin: 2px 60px 21px 60px;
 }
 
-.user-block .user-search {
-	min-width: 200;
+.user-search {
+	display: flex;
+	position: relative;
+	width: 440px;
 	margin-right: auto;
+}
+
+.user-search::before {
+	content: "";
+	position: absolute;
+	top: 16px;
+	left: 3px;
+	width: 16px;
+	height: 16px;
+	background: url(../img/search.png) no-repeat;	
+}
+
+.user-search input[type="search"] {
+	background-color: #f7e296;
+	border: none;
+	font-family: "Open sans";
+	letter-spacing: 0.01em;
+	opacity: 0.3;
+	color: black;
+	font-size: 15px;
+	flex: 1;
+	padding-left: 39px;
+}
+
+.user-search input[type="submit"] {
+	background-color: #f7e296;
+	border: none;
+	font-size: 15px;
+	letter-spacing: normal;
+	margin-left: auto;
+	padding: 15px;
+	box-shadow: inset 0 0 0 2px black;
+	cursor: pointer;
+	visibility: hidden;
+}
+
+.user-search input[type="search"]:hover {
+	opacity: 0.6;
+}
+
+.user-search input[type="search"]:focus {
+	opacity: 1;
+	color: black;
+	box-shadow: inset 0 -2px black;
+}
+
+.user-search input[type="search"]:focus~input[type="submit"] {
+	visibility: visible;
+}
+
+.user-search input[type="search"]~input[type="submit"]:active {
+	visibility: visible;
+}
+
+.user-search input[type="submit"]:hover {
+	color: rgba(255, 255, 255, 1);
+	background-color: black;
+}
+
+.user-search input[type="submit"]:active {
+	color: rgba(255, 255, 255, 0.3);	
 }
 
 .user-block .user-nav {
 	display: flex;
+	flex-direction: row;
 	justify-content: flex-end;
-	min-width: 500px;
+	align-items: center;
+	width: 500px;
 	margin-left: auto; 
 }
 
 .user-nav .login {
-	margin-right: 215px;
+	margin-left: 14px;
 }
-/* Не пашет нихуя
-.user-nav .item::before {
+
+.user-nav li {
+	list-style: none;
+}
+
+.user-nav li:hover {
+	opacity: 0.6;
+}
+
+.user-nav li:active {
+	opacity: 0.3;
+}
+
+.user-nav a {
+	color: black;
+	text-decoration: none;
+}
+
+.user-nav li:nth-child(1) {
+	margin-right: auto;
+}
+
+.user-nav li::before {
 	content: "";
-	width: 5px;
-	height: 5px;
-	background-color: black;	
+	display: inline-flex;
+	width: 12px;
+	height: 12px;
+	background-image: url(../img/user-nav-sprite.png);
+	background-repeat: no-repeat;
 }
-*/
+
+.user-nav li:first-child::before {
+	width: 13px;
+	background-position: -57px 0;
+}
+
+.user-nav li:nth-child(2)::before {
+	width: 10px;
+	height: 10px;
+	margin-right: 10px;
+	background-position: -34px 0;
+}
+
+.user-nav li:nth-child(3)::before {
+	background-position: -12px 0;	
+	margin-right: 11px;
+}
+
 .user-nav .сompare {
-	margin-right: 40px;
+	margin-right: 42px;
 }
 
 .main-nav .main-menu {
-	flex-basis: 1040px;
-	margin: 0 60px;
+	flex-basis: 1160px;
+	margin: 0 auto;
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-end;
@@ -108,41 +221,152 @@ body {
 	font-weight: bold;
 	text-transform: uppercase;
 	letter-spacing: 0.2em;
+	background-color: #f7e296;	
+	z-index: 10;
 }
 
-.catalog .catalog-nav {
-	visibility: hidden; 
+.main-menu li {
+	list-style: none;
+}
+
+.main-menu a {
+	text-decoration: none;
+	color: black;
+}
+
+.main-menu a:hover {
+	opacity: 0.6;
+}
+
+.main-menu a:active {
+	opacity: 0.3;
+}
+
+.main-menu .catalog {
+	position: relative;
+	width: 300px;
+	margin-right: 240px;
+	padding-left: 60px;
+}
+
+.catalog:hover>.catalog-nav {
+	visibility: visible;
+}
+
+.catalog .catalog-nav { 
+	visibility: hidden;
+	display: flex;
+	flex-direction: row;
+	width: 600px;
+	margin-right: auto;
+	position: relative;
+	flex-wrap: wrap;
 	font-size: 15px;
 	line-height: 36px;
-	font-family: gilroy;
-	font-weight: lighter;
+	font-family: "Open Sans";
+	font-weight: 400;
 	text-transform: none;
 	letter-spacing: normal;
+	padding: 18px 490px 35px 50px;
+	margin-left: -50px;
+	background-color: #f7e296;
+	z-index: 10;
+}
+
+.catalog-nav li:nth-child(3n+1) {
+	min-width: 240px;
+}
+
+.catalog-nav li:nth-child(3n+2) {
+	min-width: 200px;
+}
+
+.catalog-nav li:last-child {
+	min-width: 240px;
 }
 
 .menu-contacts {
 	margin-left: ;
-	margin-right: -5px;
+	margin-right: 56px;
+	z-index: 5;
 }
 
 .menu-warranty {
-	margin-right: 110px;
+	margin-right: 109px;
 }
 
 .menu-delivery {
-	margin-right: 35px;
+	margin-right: 34px;
 }
 
-.main-menu .catalog {
-	min-width: 300px;
-	margin-right: 240px;
+.catalog>a::after {
+	content: "";
+	position: absolute;
+	background-image: url(../img/plus.png);
+	width: 16px;
+	height: 16px;
+	top: 7px;
+	margin-left: 12px
 }
 
 .slide {
+	margin: auto;
 	display: flex;
 	justify-content: space-between; 
-	width: 1040px;
-	margin: -196px 60px 20px 60px;
+	position: relative;
+	width: 1160px;
+	margin: -143px 0 22px 0;
+}
+
+.slider .container {
+	position: relative;
+}
+
+input[type="radio"] {
+	display: none;
+}
+
+.slider-controls {
+	position: absolute;
+	bottom: 192px;
+	right: 87px;
+	z-index: 100;
+}
+
+.slider-controls label::before {
+    content: "";
+    display: inline-flex;
+    width: 10px;
+    height: 10px;
+    margin-right: 10px;
+    border-radius: 50%;
+    box-shadow:inset 0 0 0 3px rgba(0, 0, 0, 0.3);
+	border: 5px solid transparent;
+	cursor: pointer;
+}
+
+input[id="slider-btn-1"]:hover~.slider-controls label[for="slider-btn-1"]::before{
+    box-shadow:inset 0 0 0 3px rgba(0, 0, 0, 0.6);	
+}
+
+input[id="slider-btn-2"]:hover~.slider-controls label[for="slider-btn-2"]::before{
+    box-shadow:inset 0 0 0 3px rgba(0, 0, 0, 0.6);	
+}
+
+input[id="slider-btn-3"]:hover~.slider-controls label[for="slider-btn-3"]::before{
+    box-shadow:inset 0 0 0 3px rgba(0, 0, 0, 0.6);	
+}
+
+input[id="slider-btn-1"]:checked~.slider-controls label[for="slider-btn-1"]::before{
+    box-shadow:inset 0 0 0 3px rgba(0, 0, 0, 1);	
+}
+
+input[id="slider-btn-2"]:checked~.slider-controls label[for="slider-btn-2"]::before{
+    box-shadow:inset 0 0 0 3px rgba(0, 0, 0, 1);	
+}
+
+input[id="slider-btn-3"]:checked~.slider-controls label[for="slider-btn-3"]::before{
+    box-shadow:inset 0 0 0 3px rgba(0, 0, 0, 1);	
 }
 
 input[id="slider-btn-1"]:checked~.slide:nth-of-type(3), 
@@ -161,16 +385,35 @@ input[id="slider-btn-3"]:checked~.slide:nth-of-type(3) {
 }
 
 .slide-image {
-	min-height: 570px;
-	min-width: 490px;
-	padding-left: 30px;
+	display: flex;
+	height: 570px;
+	width: 580px;
 	flex: 1;
+	align-self: center;
+}
+
+.slide-image img {
+	margin: auto;
+}
+
+.slide-image .quadrocopter {
+	margin-left: 31px;
+	margin-top: 96px;
+}
+
+.slide-image .tracker {
+	margin-left: 116px;
+	margin-top: 43px;	
+}
+
+.slide-image .monopod {
+	margin-left: 90px;
+	margin-top: 30px;	
 }
 
 .slide-feature {
 	min-height: 570px;
-	min-width: 501px;
-	padding-left: 19px;
+	width: 580px;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
@@ -178,31 +421,84 @@ input[id="slider-btn-3"]:checked~.slide:nth-of-type(3) {
 	flex: 1;
 }
 
+.slide-feature::before {
+	content: "";
+	position: absolute;
+	width: 100px;
+	height: 7px;
+	background-color: white;
+	left: 20px;
+	top: 68px;
+}
+
 .slide-feature .number {
 	position: absolute;
-	right: -12px;
+	right: 48px;
+	top: 32px;
 	font-size: 12em;
 	line-height: 0.85em;
 	font-family: gilroy;
-	font-weight: bold;
-	margin-left: auto;
-	align-self: flex-end;
-	z-index: -1;
+	font-weight: 800;
+	z-index: 1;
+	color: white;
 }
 
 .slide-feature .caption {
-	margin-top: 78px;
-	margin-bottom: 20px;
-	letter-spacing: 0.01em;
+	margin-top: 110px;
+	margin-bottom: 4px;
+	margin-left: 20px;
+	font-weight: 800;
+	letter-spacing: 0.014em;
+	z-index: 2;
+}
+
+.slide-feature .feature {
+	margin-left: 20px;
+	margin-right: 80px;
+	font-family: "Open sans"
 }
 
 .slide-feature .btn {
-	margin-top: 59px;
+	position: absolute;
+	left: 20px;
+	bottom: 202px;
+	padding: 0 43px;
+	line-height: 8px;
+	box-shadow: inset 0px 0px 0px 4px #f0c52e;
+	color: rgba(0, 0, 0, 1);
+}
+
+.slide-feature .btn:hover {
+	box-shadow:
+		0px -16px 0px 0px #f0c52e,
+		0px 16px 0px 0px #f0c52e,
+		0px -8px 0px 0px #f0c52e,
+		0px 8px 0px 0px #f0c52e,
+		inset 16px 1px 0px 16px #f0c52e;
+}
+
+.slide-feature .btn:active {
+	box-shadow:
+		0px -16px 0px 0px #f0c52e,
+		0px 16px 0px 0px #f0c52e,
+		0px -8px 0px 0px #f0c52e,
+		0px 8px 0px 0px #f0c52e,
+		inset 16px 1px 0px 16px #f0c52e;
+	color: rgba(0, 0, 0, 0.3);
 }
 
 .feature-table {
 	font-family: gilroy;
-	margin-top: 73px;
+	letter-spacing: 0.01em;
+	margin-left: -55px;
+	margin-top: 116px;
+	border-spacing: 75px 10px ;
+}
+
+.feature-table.quadro {
+	margin-left: -26px;
+	margin-top: 116px;
+	border-spacing: 45px 10px ;
 }
 
 .feature-table .table-header {
@@ -210,7 +506,8 @@ input[id="slider-btn-3"]:checked~.slide:nth-of-type(3) {
 }
 
 .feature-table .table-data {
-	
+	font-family: "Open sans";
+	font-size: 13px;	
 }
 
 .feature-list {
@@ -223,17 +520,21 @@ input[id="slider-btn-3"]:checked~.slide:nth-of-type(3) {
 
 .feature-item {
 	display: flex;
+	position: relative;
 	flex-direction: column;
 	font-size: 18px;
 	line-height: 22px;
 	font-family: gilroy;
 	font-weight: bold;
+	padding-top: 194px;
 	width: 160px;
 }
 
-.feature-list .feature-item::before {
+.feature-item a::before {
 	content:"";
-	margin-bottom: 35px;
+	position: absolute;
+	top: 0;
+	left: 0;
 	width: 160px;
 	height: 160px;
 	background-color: #f7e296;
@@ -242,27 +543,27 @@ input[id="slider-btn-3"]:checked~.slide:nth-of-type(3) {
 	background-position: 0 50%;
 }
 
-.feature-item:nth-child(1)::before {
+.feature-item:nth-child(1) a::before {
 	background-position: 0 0;
 }
 
-.feature-item:nth-child(2)::before {
+.feature-item:nth-child(2) a::before {
 	background-position: -200px 0;
 }
 
-.feature-item:nth-child(3)::before {
+.feature-item:nth-child(3) a::before {
 	background-position: -400px 0;
 }
 
-.feature-item:nth-child(4)::before {
+.feature-item:nth-child(4) a::before {
 	background-position: -600px 0;
 }
 
-.feature-item:nth-child(5)::before {
+.feature-item:nth-child(5) a::before {
 	background-position: -800px 0;
 }
 
-.feature-item:nth-child(6)::before {
+.feature-item:nth-child(6) a::before {
 	background-position: -1000px 0;
 }
 
@@ -457,43 +758,37 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 
 .footer-social {
 	display: flex;
-	margin: 10px auto;
+	align-self: center;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 .footer-social .social-btn {
+	display: flex;
+	width: 39px;
+	height: 38px;
 	font-size: 0;
+	margin-left: 15px;
+	background-image: url(../img/spritesheet-social.png);
+	background-repeat: no-repeat;
 }
 
-.social-btn:nth-child(1)::before {
-	content: "";
-	display: block;
-	margin-left: 25px;
-	width: 38px;
-	height: 38px;
-	background-image: url(../img/facebook.png);
+.social-btn:nth-child(1) {
+	background-position: 0 0; 
 }
 
-.social-btn:nth-child(2)::before {
-	content: "";
-	display: block;
-	margin-left: 16px;
-	width: 38px;
-	height: 38px;
-	background-image: url(../img/insta.png);
+.social-btn:nth-child(2) {
+	background-position: -66px 0;
 }
 
-.social-btn:nth-child(3)::before {
-	content: "";
-	display: block;
-	margin-left: 17px;
-	width: 38px;
-	height: 38px;
-	background-image: url(../img/twitter.png);
+.social-btn:nth-child(3) {
+	background-position: -105px 0;	
 }
 
 
 .htmlacademy {
 	margin-top: 12px;
+	margin-left: -13px;
 }
 
 .container.title {
