--- a/css/style.css
+++ b/css/style.css
@@ -983,9 +983,12 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 	color: rgba(0, 0, 0, 0.3)
 }
 
-.map {
-	margin-top: 23px;
-	margin-bottom: 61px;
+.map-show {
+	display: block;
+	width: 560px;
+	height: 222px;
+	margin-top: 38px;
+	margin-bottom: 70px;
 }
 
 .contacts .btn{
@@ -1026,7 +1029,28 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 	color: rgba(0, 0, 0, 0.3)
 }
 
+.modal-map {
+	display: none;
+ 	position: fixed;
+ 	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+ 	width: 960px;
+	height: 559px;
+ 	background-color: white;
+	z-index: 100;
+	box-shadow: 0 20px 60px 5px rgba(0,0,0, 0.2);
+	background-image: url(../img/map-big.jpg);
+}
+
+.modal-map-show {
+	display: block;	
+}
+
 .modal-content {
+	display: none;
  	position: fixed;
  	top: 0;
 	bottom: 0;
@@ -1039,6 +1063,10 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
  	background-color: white;
 	z-index: 100;
 	box-shadow: 0 20px 60px 5px rgba(0,0,0, 0.2);
+}
+
+.modal-content-show {
+	display: block;
 }
 
 .modal-content-close {
