--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 @font-face {
-	font-family: gilroy;
+	font-family: "gilroy";
 	src: url(../fonts/gilroyextrabold.woff), url(../fonts/gilroyextrabold.woff2);
 	font-weight: 800;
 }
 
 @font-face {
-	font-family: gilroy;
+	font-family: "gilroy";
 	src: url(../fonts/gilroylight.woff), url(../fonts/gilroylight.woff2);
 	font-weight: 400;
 }
@@ -13,7 +13,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	font-family: "Open Sans", Arial, sans-serif;
+	font-family: "Open Sans", "Arial", sans-serif;
 	letter-spacing: 0.01em;
 	font-size: 15px;
 	line-height: 30px;
@@ -27,7 +27,7 @@ a {
 
 .caption,
 .breadcrumbs-title {
-	font-family: gilroy;
+	font-family: "gilroy", "Arial", sans-serif;
 	font-weight: bold;
 	font-size: 47px;
 	line-height: 1.2em;
@@ -43,7 +43,7 @@ a {
 
 
 .btn {
-	font-family: gilroy;
+	font-family: "gilroy", "Arial", sans-serif;
 	font-size: 18px;
 	letter-spacing: 0.2em;
 	text-transform: uppercase;
@@ -52,15 +52,20 @@ a {
 	color: black;
 }
 
+.main-header {
+	padding: 0 20px;
+}
+
 .main-header .container {
 	background-color: #f7e296;
 	box-shadow:
-		inset 0 18px white;
+		inset 0 19px white;
 	padding: 0;
 }
 
 .header-logo {
 	width: 200px;
+	height: 36px;
 	margin-left: 59px;
 	margin-top: 21px;
 }
@@ -77,7 +82,7 @@ a {
 	display: flex;
 	flex-direction: row;
 	width: 1040px;
-	margin: 2px 60px 21px 60px;
+	margin: 11px 60px 21px 60px;
 }
 
 .user-search {
@@ -100,12 +105,12 @@ a {
 .user-search input[type="search"] {
 	background-color: #f7e296;
 	border: none;
-	font-family: "Open sans";
+	font-family: "Open sans", "Arial", sans-serif;
 	letter-spacing: 0.01em;
 	color: black;
 	font-size: 15px;
 	flex: 1;
-	padding-left: 39px;
+	padding:0 0 0 39px;
 }
 
 .user-search input[type="search"]::placeholder {
@@ -160,10 +165,6 @@ a {
 	margin-left: auto; 
 }
 
-.user-nav .login {
-	margin-left: 14px;
-}
-
 .user-nav li {
 	list-style: none;
 	cursor: pointer;
@@ -186,7 +187,7 @@ a {
 	margin-right: auto;
 }
 
-.user-nav li::before {
+.user-nav li:not(.logout)::before {
 	content: "";
 	display: inline-flex;
 	width: 12px;
@@ -195,25 +196,33 @@ a {
 	background-repeat: no-repeat;
 }
 
-.user-nav li:first-child::before {
+.login a {
+	margin-left: 14px;
+}
+
+.basket a {
+	margin-right: -1px;
+}
+
+.user-nav .login::before {
 	width: 13px;
 	background-position: -57px 0;
 }
 
-.user-nav li:nth-child(2)::before {
+.user-nav .сompare::before {
 	width: 10px;
 	height: 10px;
-	margin-right: 10px;
+	margin-right: 8px;
 	background-position: -34px 0;
 }
 
-.user-nav li:nth-child(3)::before {
+.user-nav .basket::before {
 	background-position: -12px 0;	
 	margin-right: 11px;
 }
 
 .user-nav .сompare {
-	margin-right: 42px;
+	margin-right: 41px;
 }
 
 .main-nav .main-menu {
@@ -222,11 +231,10 @@ a {
 	margin: 0 auto;
 	display: flex;
 	font-size: 18px;
-	font-family: gilroy;
+	font-family: "gilroy", "Arial", sans-serif;
 	font-weight: bold;
 	text-transform: uppercase;
-	letter-spacing: 0.2em;
-	background-color: #f7e296;	
+	letter-spacing: 0.2em;	
 	z-index: 10;
 	padding-bottom: 47px;
 }
@@ -269,7 +277,7 @@ a {
 	left: -60px;
 	font-size: 15px;
 	line-height: 36px;
-	font-family: "Open Sans";
+	font-family: "Open Sans", "Arial", sans-serif;
 	font-weight: 400;
 	text-transform: none;
 	letter-spacing: 0.01em;
@@ -319,7 +327,6 @@ a {
 }
 
 .slide {
-	margin: auto;
 	display: flex;
 	justify-content: space-between; 
 	position: relative;
@@ -339,7 +346,7 @@ input[type="radio"] {
 
 .slider-controls {
 	position: absolute;
-	bottom: 192px;
+	bottom: 193px;
 	right: 87px;
 	z-index: 100;
 }
@@ -409,12 +416,12 @@ input[id="slider-btn-3"]:checked~.slide:nth-of-type(3) {
 
 .slide-image .quadrocopter {
 	margin-left: 31px;
-	margin-top: 96px;
+	margin-top: 95px;
 }
 
 .slide-image .tracker {
 	margin-left: 116px;
-	margin-top: 43px;	
+	margin-top: 42px;	
 }
 
 .slide-image .monopod {
@@ -439,25 +446,25 @@ input[id="slider-btn-3"]:checked~.slide:nth-of-type(3) {
 	height: 7px;
 	background-color: white;
 	left: 20px;
-	top: 68px;
+	top: 67px;
 }
 
 .slide-feature .caption {
-	margin-top: 110px;
-	margin-bottom: 3px;
+	margin-top: 109px;
+	margin-bottom: 4px;
 	margin-left: 20px;
 	font-weight: 800;
-	letter-spacing: 0.014em;
+	letter-spacing: 0.01em;
 	z-index: 10;
 }
 
 .slide-feature .number {
 	position: absolute;
 	right: 48px;
-	top: 32px;
+	top: 29px;
 	font-size: 12em;
 	line-height: 0.85em;
-	font-family: gilroy;
+	font-family: "gilroy", "Arial", sans-serif;
 	font-weight: 800;
 	z-index: -1;
 	color: white;
@@ -466,7 +473,7 @@ input[id="slider-btn-3"]:checked~.slide:nth-of-type(3) {
 .slide-feature .feature {
 	margin-left: 20px;
 	margin-right: 80px;
-	font-family: "Open sans"
+	font-family: "Open sans", "Arial", sans-serif;
 }
 
 .slide-feature .btn {
@@ -497,12 +504,12 @@ input[id="slider-btn-3"]:checked~.slide:nth-of-type(3) {
 
 .slide-feature .btn:hover::before { 
 	height: 40px;
-	transition: height 0.5s ease;
+	transition: height 0.3s ease;
 }
 
 .slide-feature .btn:active::before { 
 	height: 40px;
-	transition: height 0.5s ease;
+	transition: height 0.3s ease;
 }
 
 .slide-feature .btn:active {
@@ -528,7 +535,7 @@ input[id="slider-btn-3"]:checked~.slide:nth-of-type(3) {
 }
 
 .feature-table .table-data {
-	font-family: "Open sans";
+	font-family: "Open sans", "Arial", sans-serif;
 	font-size: 13px;	
 }
 
@@ -546,7 +553,7 @@ input[id="slider-btn-3"]:checked~.slide:nth-of-type(3) {
 	flex-direction: column;
 	font-size: 18px;
 	line-height: 22px;
-	font-family: gilroy;
+	font-family: "gilroy", "Arial", sans-serif;
 	font-weight: bold;
 	padding-top: 194px;
 	width: 160px;
@@ -555,6 +562,10 @@ input[id="slider-btn-3"]:checked~.slide:nth-of-type(3) {
 .feature-item a {
 	text-decoration: none;
 	color: rgba(0, 0, 0, 1)
+}
+
+.feature-item a:active {
+	color: rgba(0,0,0, 0.3);
 }
 
 .feature-item a::before {
@@ -661,14 +672,14 @@ input[name="toggle2"] {
 	height: 319px;
 	background-color: black;
 	top: 0;
-	right: 0;
+	right: 1px;
 }
 
 .services-controls label {
 	display: flex;
 	width: 160px;
 	margin-bottom: 34px;
-	font-family: gilroy;
+	font-family: "gilroy", "Arial", sans-serif;
 	justify-content: center;
 	position: relative;
 	z-index: 1;
@@ -692,7 +703,7 @@ input[name="toggle2"] {
 
 .services-controls label:hover::before {
 	height: 40px;
-	transition: height 0.5s ease;
+	transition: height 0.3s ease;
 }
 
 #btn-1:checked~.services-controls label[for="btn-1"] {
@@ -702,7 +713,7 @@ input[name="toggle2"] {
 #btn-1:checked~.services-controls label[for="btn-1"]::before {
 	height: 40px;
 	width: 278px;
-	transition: height 0.5s ease, width 0.5s ease; 
+	transition: height 0.3s ease, width 0.4s ease; 
 	color: #f7e184;
 	z-index: -1;
 	background-color: black;
@@ -715,7 +726,7 @@ input[name="toggle2"] {
 #btn-2:checked~.services-controls label[for="btn-2"]::before {
 	height: 40px;
 	width: 278px;
-	transition: height 0.5s ease, width 0.5s ease; 
+	transition: height 0.3s ease, width 0.4s ease; 
 	color: #f7e184;
 	z-index: -1;
 	background-color: black;
@@ -728,7 +739,7 @@ input[name="toggle2"] {
 #btn-3:checked~.services-controls label[for="btn-3"]::before {
 	height: 40px;
 	width: 278px;
-	transition: height 0.5s ease, width 0.5s ease; 
+	transition: height 0.3s ease, width 0.4s ease; 
 	color: #f7e184;
 	z-index: -1;
 	background-color: black;
@@ -746,7 +757,7 @@ input[name="toggle2"] {
 .services-slide .caption {
 	letter-spacing: 0.01em;
 	margin-top: 2px;
-	margin-left: 95px;
+	margin-left: 94px;
 	margin-bottom: 27px;
 }
 
@@ -755,7 +766,7 @@ input[name="toggle2"] {
 	position: absolute;
 	top: 85px;
 	right: 65px;
-	width: 136px;
+	width: 137px;
 	height: 164px;
 	background: url(../img/services-sprite.png) no-repeat 0 -188px;
 }
@@ -764,7 +775,7 @@ input[name="toggle2"] {
 	content: "";
 	position: absolute;
 	top: 60px;
-	right: 45px;
+	right: 46px;
 	width: 171px;
 	height: 195px;
 	background: url(../img/services-sprite.png) no-repeat 0 -352px;
@@ -773,7 +784,7 @@ input[name="toggle2"] {
 .container .services-slide:nth-last-of-type(1)::after {
 	content: "";
 	position: absolute;
-	top: 60px;
+	top: 59px;
 	right: 70px;
 	width: 156px;
 	height: 188px;
@@ -800,6 +811,10 @@ input[id="btn-2"]:checked~.services-slide:nth-of-type(4) {
 input[id="btn-3"]:checked~.services-slide:nth-of-type(2), 
 input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 	display: none;
+}
+
+.logotypes {
+	padding: 0 20px;
 }
 
 .logotypes .container {
@@ -851,6 +866,10 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 	background: url(../img/sprite-vive.png) no-repeat 0 0px;
 }
 
+.about {
+	padding: 0 20px;
+}
+
 .about .container {
 	width: 1160px;
 	padding: 0;
@@ -861,8 +880,8 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 }
 
 .about-us {
-	padding-right: 75px;
-	width: 485px;
+	padding-right: 85px;
+	width: 475px;
 	margin-right: auto;
 	position: relative;
 }
@@ -878,6 +897,9 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 }
 
 .about-us .caption {
+	font-family: "gilroy", "arial", sans-serif;
+	font-size: 47px;
+	letter-spacing: 0.01em;
 	margin-top: 48px;
 	margin-bottom: 39px;
 }
@@ -898,17 +920,27 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 	left: 0;
 }
 .contacts .caption {
+	font-family: "gilroy", "arial", sans-serif;
+	font-size: 47px;
+	letter-spacing: 0.01em;
 	margin-top: 48px;
 	margin-bottom: 39px;
-	
 } 
 
 .about-us .title {
+	font-family: "Open sans", "Arial", sans-serif;
+	font-size: 15px;
+	line-height: 30px;
+	letter-spacing: normal;
 	margin-top: 30px;
 	margin-bottom: 15px;
 }
 
 .contacts .title {
+	font-family: "Open sans", "Arial", sans-serif;
+	font-size: 15px;
+	line-height: 30px;
+	letter-spacing: normal;
 	margin-top: 30px;
 	margin-bottom: 15px;
 }
@@ -918,7 +950,7 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 	margin-top: 66px;
 	padding: 0;
 	margin-bottom: 54px;
-	font-family: gilroy;
+	font-family: "gilroy", "Arial", sans-serif;
 	font-size: 16px;
 	letter-spacing: 0.03em;	
 	line-height: 40px;
@@ -971,12 +1003,12 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 
 .about-us .btn:hover::before { 
 	height: 40px;
-	transition: height 0.5s ease;
+	transition: height 0.3s ease;
 }
 
 .about-us .btn:active::before { 
 	height: 40px;
-	transition: height 0.5s ease;
+	transition: height 0.3s ease;
 }
 
 .about-us .btn:active {
@@ -1017,12 +1049,12 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 
 .contacts .btn:hover::before { 
 	height: 40px;
-	transition: height 0.5s ease;
+	transition: height 0.3s ease;
 }
 
 .contacts .btn:active::before { 
 	height: 40px;
-	transition: height 0.5s ease;
+	transition: height 0.3s ease;
 }
 
 .contacts .btn:active {
@@ -1130,7 +1162,7 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 	border: none;
 	box-sizing: border-box;
 	border: 3px solid transparent;
-	font-family: "open sans";
+	font-family: "open sans", "Arial", sans-serif;
 	font-size: 14px;
 	line-height: 18px;
 	background-color: rgba(230,230,230, 0.5);
@@ -1158,7 +1190,7 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 	border: none;
 	background-color: rgba(230,230,230, 0.5);
 	resize: none;
-	font-family: "open sans";
+	font-family: "open sans", "Arial", sans-serif;
 	font-size: 14px;
 	line-height: 18px;
 	padding: 13px 17px;
@@ -1190,11 +1222,12 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 	background-color: #464646;
 	display: flex;
 	color: #ffffff;
+	padding: 0 20px;
 }	
 
 .footer .container {
 	width: 1160px;
-	padding-top: 50px;
+	padding: 50px 20px 0 20px;
 }
 
 .footer-top {
@@ -1306,7 +1339,7 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 	flex-direction: row;
 	justify-content: space-between;
 	font-size: 18px;
-	font-family: gilroy;
+	font-family: "gilroy", "Arial", sans-serif;
 	font-weight: bold;
 	text-transform: uppercase;
 	letter-spacing: 0.2em;
@@ -1401,8 +1434,9 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 
 /* КАТАЛОГ */
 
-.user-nav .exit {
-	margin-left: 20px;
+.user-nav .logout{
+	background-image: none;
+	margin-right: 62px;
 	opacity: 0.3;
 }
 
@@ -1411,9 +1445,11 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 }
 
 .breadcrumbs-title {
-	margin-top: 34px;
+	font-family: "gilroy", "Arial", sans-serif;
+	letter-spacing: 0.01em;
+	margin-top: 33px;
 	margin-left: 60px;
-	margin-bottom: 16px;
+	margin-bottom: 17px;
 	letter-spacing: 0.01em;
 }
 
@@ -1426,6 +1462,7 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 
 .breadcrumbs li {
 	list-style: none;
+	font-family: "Open sans", "Arial", sans-serif;
 	letter-spacing: 0.01em;
 	margin-right: 20px;
 	font-size: 14px;
@@ -1458,6 +1495,7 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 	background-color: rgba(0, 0, 0, 0.08);
 	position: relative;
 	z-index: 2;
+	padding: 0 20px;
 }
 
 .sorting-filter {
@@ -1472,7 +1510,7 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 }
 
 .filter-title {
-	font-family: gilroy;
+	font-family: "gilroy", "Arial", sans-serif;
 	text-transform: uppercase;
 	font-size: 16px;
 	letter-spacing: 0.2em;
@@ -1482,7 +1520,7 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 }
 
 .sorting-title {
-	font-family: gilroy;
+	font-family: "gilroy", "Arial", sans-serif;
 	text-transform: uppercase;
 	font-size: 16px;
 	letter-spacing: 0.2em;
@@ -1503,7 +1541,7 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 .sorting-option {
 	padding: 0;
 	padding-right: 30px;
-	font-family: "Open sans";
+	font-family: "Open sans", "Arial", sans-serif;
 	font-size: 14px;
 	line-height: 18px;
 }
@@ -1557,14 +1595,15 @@ input[id="btn-3"]:checked~.services-slide:nth-of-type(3) {
 	background: linear-gradient(to left, transparent 71%, #efefef 29%);
 	position: relative;
 	z-index: 1;	
+	padding: 0 20px;
 }
 
 .catalog-section .container {
 	display: flex;
 	flex-direction: row;
-	background: linear-gradient(to left, transparent 71%, #efefef 29%);
+	background: linear-gradient(to left, transparent 832px, #efefef 328px);
 	margin-top: -70px;
-	padding-top: 70px;
+	padding: 70px 0 0 0;
 	position: relative;
 }
 
@@ -1594,7 +1633,7 @@ fieldset {
 }
 
 .filter-range-title {
-	font-family: gilroy;
+	font-family: "gilroy", "Arial", sans-serif;
 	font-weight: bold;
 	font-size: 18px;
 	letter-spacing: 0.01em;
@@ -1646,7 +1685,7 @@ fieldset {
 }
 
 .price-controls label {
-  	font-family: gilroy;
+  	font-family: "gilroy", "Arial", sans-serif;
   	font-size: 14px;
 	margin-right: 4px;
 	color: black;
@@ -1671,12 +1710,12 @@ fieldset {
 	width: 100px;
 	padding: 0px;
 	padding-right: 100px;
-	padding-bottom: 26px;
+	padding-bottom: 27px;
 	border-bottom: 2px solid black;
 }
 
 .color legend {
-	font-family: gilroy;
+	font-family: "gilroy", "Arial", sans-serif;
 	font-weight: bold;
 	font-size: 18px;
 	letter-spacing: 0.01em;
@@ -1692,7 +1731,7 @@ fieldset {
 .color label {
 	margin-bottom: 10px;
 	font-size: 14px;
-	font-family: "open sans";
+	font-family: "Open sans", "Arial", sans-serif;
 	letter-spacing: 0.01px;
 	position: relative;
 	color: black;
@@ -1731,12 +1770,12 @@ input[type="checkbox"]:checked + label::before {
 }
 
 .bluetooth legend {
-	font-family: gilroy;
+	font-family: "gilroy", "Arial", sans-serif;
 	font-weight: bold;
 	font-size: 18px;
 	letter-spacing: 0.01em;
 	padding-top: 8px;
-	margin-bottom: 15px;
+	margin-bottom: 14px;
 	color: black;
 }
 
@@ -1746,7 +1785,7 @@ input[type="checkbox"]:checked + label::before {
 	font-size: 14px;
 	line-height: 40px;
 	height: 40px;
-	font-family: "open sans";
+	font-family: "Open sans", "Arial", sans-serif;
 	letter-spacing: 0.01px;
 	color: black;
 }
@@ -1927,7 +1966,7 @@ li .btn:active {
 }
 
 li .compare {
-	font-family: "open sans";
+	font-family: "open sans", "Arial", sans-serif;
 	line-height: 36px;
 	font-size: 13px;
 	opacity: 0.5;
@@ -1952,7 +1991,7 @@ li .compare:active {
 
 .item-name {
 	display: block;
-	font-family: gilroy;
+	font-family: "gilroy", "Arial", sans-serif;
 	font-weight: bold;
 	font-size: 18px;
 	width: 280px;
